[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tutorial_box.png" type="Texture" id=2]
[ext_resource path="res://scripts/TutorialEndlessModeMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/back.png" type="Texture" id=4]
[ext_resource path="res://assets/forward.png" type="Texture" id=5]
[ext_resource path="res://assets/screenshots/step1_2.png" type="Texture" id=6]
[ext_resource path="res://assets/forward_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/back_hover.png" type="Texture" id=8]
[ext_resource path="res://fonts/MrDafoe-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/screenshots/step2.png" type="Texture" id=10]
[ext_resource path="res://assets/screenshots/step3.png" type="Texture" id=11]
[ext_resource path="res://assets/screenshots/step4_1.png" type="Texture" id=12]
[ext_resource path="res://assets/screenshots/step1.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 68
font_data = ExtResource( 9 )

[node name="TutorialEndlessModeMenu" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="TitleLabel" parent="Control" index="0"]
text = "Tutorial"

[node name="tutorial_box" type="Sprite" parent="Control" index="1"]
position = Vector2( 752.399, 618.524 )
texture = ExtResource( 2 )

[node name="Step0" type="Control" parent="Control" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step1" type="Sprite" parent="Control/Step0" index="0"]
position = Vector2( 770, 492 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/Step0" index="1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -493.531
margin_top = -319.123
margin_right = 517.469
margin_bottom = -124.123
custom_fonts/font = SubResource( 1 )
text = "There will be spawn 3 Numbers in thr 3 rows. You need to find the one thats divisible by 7."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step1" type="Control" parent="Control" index="3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step1_2" type="Sprite" parent="Control/Step1" index="0"]
position = Vector2( 770, 492 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Control/Step1" index="1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -493.531
margin_top = -319.123
margin_right = 517.469
margin_bottom = -124.123
custom_fonts/font = SubResource( 1 )
text = "Use the arrow keys \"UP\" and \"DOWN\" to switch rows."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step2" type="Control" parent="Control" index="4"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step2" type="Sprite" parent="Control/Step2" index="0"]
position = Vector2( 770, 492 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Control/Step2" index="1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -493.531
margin_top = -319.123
margin_right = 517.469
margin_bottom = -124.123
custom_fonts/font = SubResource( 1 )
text = "If you hit the correct one the score increase by one."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step3" type="Control" parent="Control" index="5"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step3" type="Sprite" parent="Control/Step3" index="0"]
position = Vector2( 770, 492 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Control/Step3" index="1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -493.531
margin_top = -319.123
margin_right = 517.469
margin_bottom = -124.123
custom_fonts/font = SubResource( 1 )
text = "If you hit the wrong one, you get one strike."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step4" type="Control" parent="Control" index="6"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="step4_1" type="Sprite" parent="Control/Step4" index="0"]
position = Vector2( 770, 492 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Control/Step4" index="1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -493.531
margin_top = -319.123
margin_right = 517.469
margin_bottom = -124.123
custom_fonts/font = SubResource( 1 )
text = "After 7 strikes the game is over.
The current Score also the HighScore is shown."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Control" index="7"]
visible = false
margin_left = 38.1638
margin_top = 464.7
margin_right = 152.164
margin_bottom = 604.7
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForwardButton" type="TextureButton" parent="Control" index="8"]
margin_left = 1345.49
margin_top = 482.659
margin_right = 1459.49
margin_bottom = 622.659
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/ForwardButton" to="." method="_on_ForwardButton_pressed"]
